fixed toggle function on mobile menu

--- a/src/app/styles/header.module.scss
+++ b/src/app/styles/header.module.scss
@@ -64,6 +64,7 @@
         border: none;
         height: 30px;
         width: 30px;
+        z-index: 1;
       }
 
       .navLinks {
